fix buttons going off screen on smaller apple devices

--- a/what2do2day/static/assets/css/style.css
+++ b/what2do2day/static/assets/css/style.css
@@ -1548,10 +1548,7 @@ i.not-shared {
     .home.buttons {
         left: 10%;
         margin: 0;
-    }
-
-    a.button.is-link.home-btn-2 {
-        margin-left: 100px;
+        display: block;
     }
 
 }
@@ -1602,6 +1599,13 @@ i.not-shared {
         -moz-background-size: cover;
         -o-background-size: cover;
         background-size: cover;
+    }
+    /* home buttons */
+    .button.home {
+        display: inline-block;
+    }
+    a.button.is-link.home-btn-2 {
+        margin-left: 100px;
     }
 
 
